--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
-PORT = 6000
+PORT = 8000
+
+DB_HOST = localhost
+DB_PORT = 5432
+DB_USER = abin
+DB_PASSWORD = abin
+DB_NAME = zebronet
+
+JWT_SECRET = my_jwt_secret
