--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0",
+    "redis": "^4.7.0",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.2.0",
+    "@types/redis": "^4.0.11",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
